# lxrandr-qt

./: CMakeLists.txt  lxrandr-qt.kdev4  monitor.ui  monitorsettingsdialog.cpp  monitorsettingsdialog.cpp~  monitorsettingsdialog.h  randr.cpp  randr.cpp~  randr.h
